--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TrenboloneX - The Future of Exploiting</title>
+
+  <meta property="og:title" content="TrenboloneX - The Future of Exploiting" />
+  <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with TrenboloneX!" />
+  <meta property="og:image" content="trenbg.png" />
+  <meta property="og:url" content="https://trenbolonex.vercel.app/" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
   <style>
     * {
