--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta property="og:title" content="TrenboloneX - The Future of Exploiting" />
   <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with TrenboloneX!" />
-  <meta property="og:image" content="trenbg.png" />
+  <meta property="og:image" content="https://media.discordapp.net/attachments/1150768082680287243/1365708379221393559/trenbg.png?ex=680e4a8b&is=680cf90b&hm=814f2163326f9458a22c635e36b4041dfd47755865bb3a8cec73aaab44511d23&=&format=webp&quality=lossless" />
   <meta property="og:url" content="https://trenbolonex.vercel.app/" />
   
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
