--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta property="og:title" content="TrenboloneX - The Future of Exploiting" />
   <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with TrenboloneX!" />
-  <meta property="og:image" content="https://trenbolonex.vercel.app/trenbg.png" />
+  <meta property="og:image" content="https://github.com/dandzoboss/trenbolonex/blob/main/trenbg.png?raw=true" />
   <meta property="og:url" content="https://trenbolonex.vercel.app/" />
   
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
