--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TrenboloneX - The Future of Exploiting</title>
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://metatags.io/" />
   <meta property="og:title" content="TrenboloneX - The Future of Exploiting" />
   <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with TrenboloneX!" />
-  <meta property="og:image" content="https://i.imgur.com/Agm0y3Z.png" />
-  <meta property="og:url" content="https://trenbolonex.vercel.app/" />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
   
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
   <style>
