--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TrenboloneX - The Future of Exploiting</title>
+  <title>Tren.GG - Steroids, but for Roblox</title>
 
-  <meta property="og:title" content="TrenboloneX - The Future of Exploiting" />
-  <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with TrenboloneX!" />
-  <meta property="og:image" content="https://i.imgur.com/Agm0y3Z.png" />
-  <meta property="og:url" content="https://trenbolonex.vercel.app/" />
+  <meta property="og:title" content="Tren.GG - Steroids, but for Roblox" />
+  <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with Tren.GG" />
+  <meta property="og:image" content="" />
+  <meta property="og:url" content="https://trengg.vercel.app/" />
   
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
   <style>
@@ -238,8 +238,8 @@
 
   <div class="navbar">
     <div class="navbar-left">
-      <img src="tren.png" alt="TrenboloneX Icon" class="icon-img">
-      <div class="brand">TrenboloneX</div>
+      <img src="tren.png" alt="Tren.GG Icon" class="icon-img">
+      <div class="brand">Tren.GG</div>
     </div>
     <div class="navbar-right">
       <a href="https://gofile.io/d/n3o77r" target="_blank">Download</a>
@@ -248,7 +248,7 @@
   </div>
 
   <header>
-  <h1>TrenboloneX</h1>
+  <h1>Tren.GG</h1>
   <h2>The Future of Exploiting Starts Now</h2>
 
   <!-- Tilted UI Preview -->
@@ -268,11 +268,11 @@
 </header>
 
   <section class="features">
-    <h2>Why Choose TrenboloneX?</h2>
+    <h2>Why Choose Tren.GG?</h2>
     <div class="grid">
       <div class="feature-card">
         <h3>100% Free</h3>
-        <p>Unlock elite features without paying a dime — TrenboloneX is completely free.</p>
+        <p>Unlock elite features without paying a dime — Tren.GG is completely free.</p>
       </div>
       <div class="feature-card">
         <h3>Always Improving</h3>
@@ -291,19 +291,19 @@
         <p>Need help? Our community and dev team have your back 24/7.</p>
       </div>
       <div class="feature-card">
-        <h3>100% UNC</h3>
+        <h3>99% UNC</h3>
         <p>Enjoy full UNC and sUNC capabilities without limitations.</p>
       </div>
     </div>
   </section>
 
   <section class="video-section">
-    <h2>Watch TrenboloneX In Action</h2>
+    <h2>Watch Tren.GG In Action</h2>
     <iframe src="https://www.youtube.com/embed/HnmZzO8zMMs?si=fxc0ULLGlvUvDYbG" allowfullscreen></iframe>
   </section>
 
   <footer>
-    &copy; 2025 TrenboloneX. All rights reserved.
+    &copy; 2025 Tren.GG. All rights reserved.
   </footer>
 
 </body>
