--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
   <header>
   <h1>Tren.GG</h1>
-  <h2>The Future of Exploiting Starts Now</h2>
+  <h2>Steroids, but for Roblox.</h2>
 
   <!-- Tilted UI Preview -->
   <div style="margin: 3rem auto 1rem; max-width: 600px; perspective: 1000px;">
