--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     }
 
     .logo-img {
-      width: 150px; /* Larger logo as requested */
-      height: auto;
+      height: 50px; /* Fixed max height */
+      width: auto;
+      object-fit: contain;
     }
 
     .navbar-right {
