--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
     }
 
     .logo-img {
-      height: 50px; /* Fixed max height */
+      height: 100px;         /* Make it bigger */
       width: auto;
       object-fit: contain;
+      display: block;
+      margin-top: -25px;     /* Pull it upwards */
     }
 
     .navbar-right {
