--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
     }
 
     .navbar {
-      background: #111;
+      height: 80px; /* Fixed height */
+      overflow: visible; /* Let the logo "stick out" */
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.8rem 2rem;
+      padding: 0 2rem;
+      background: #111;
       box-shadow: 0 2px 10px rgba(255, 215, 0, 0.2);
       position: sticky;
       top: 0;
@@ -49,11 +51,13 @@
     }
 
     .logo-img {
-      height: 100px;         /* Make it bigger */
+      height: 150px; /* Big logo */
       width: auto;
       object-fit: contain;
+      margin-top: 0;
+      margin-bottom: 0;
       display: block;
-      margin-top: -25px;     /* Pull it upwards */
+      transform: translateY(10px); /* Push it down slightly to center it visually */
     }
 
     .navbar-right {
