--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     }
 
     .logo-img {
-      height: 150px; /* Big logo */
+      height: 150px;       /* Keep it large */
       width: auto;
       object-fit: contain;
-      margin-top: 0;
-      margin-bottom: 0;
       display: block;
-      transform: translateY(10px); /* Push it down slightly to center it visually */
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
     }
 
     .navbar-right {
