--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
       align-items: center;
     }
 
-    .logo-img {
-      height: 150px;       /* Keep it large */
-      width: auto;
-      object-fit: contain;
-      display: block;
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
-    }
+      .logo-img {
+  height: 150px; /* Big logo */
+  width: auto;
+  object-fit: contain;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: block;
+  transform: translateY(10px); /* Push it down slightly to center it visually */
+}
 
     .navbar-right {
       display: flex;
