--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta property="og:description" content="Unlock elite features, fast updates, and customizable power — all for free with Tren.GG" />
   <meta property="og:image" content="" />
   <meta property="og:url" content="https://trengg.vercel.app/" />
+  <link rel="icon" href="tren.png" sizes="192x192" type="image/png">
   
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
   <style>
