--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ header h2 {
 
   <section class="video-section">
     <h2>Watch Tren.GG In Action</h2>
-    <iframe src="https://www.youtube.com/embed/HnmZzO8zMMs?si=fxc0ULLGlvUvDYbG" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/_5u3Au7-A7g?si=3hhKei2mBDZxRFRu" allowfullscreen></iframe>
   </section>
 
   <footer>
