--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       scroll-behavior: smooth;
     }
 
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+
     body {
       margin: 0;
       font-family: 'Outfit', sans-serif;
