--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
       border-top: 1px solid #222;
       background-color: #0d0d0d;
       animation: fadeIn 2s ease-out;
+      width: 100%;
     }
 
     /* Responsive adjustments */
