--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="TrenLogoNoBG.png" alt="Tren.GG Logo">
+                <img src="tren.png" alt="Tren.GG Logo">
             </div>
             <div class="nav-buttons">
                 <a href="#" class="btn primary">
